Use WebClientServiceProvider instead of manually instantiating an HTTP client and remove record splitting